Fix: update format

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 :root {
-    --primary-color: #616283; /*Ultra Violet*/
-    --Secondary-color: white; /*White*/
-    --Tertiary-color: black; /*Black*/
-    --Text-align: center;
-    --Modal-backgroud: #73956F;
+  --primary-color: #616283; /*Ultra Violet*/
+  --Secondary-color: white; /*White*/
+  --Tertiary-color: black; /*Black*/
+  --Text-align: center;
+  --Modal-backgroud: #73956f;
 }
 body {
     background-color: var(--Tertiary-color);
@@ -100,34 +100,21 @@ body {
     background: none;
     color: var(--Secondary-color);
     text-decoration: underline;
-  }
+}
 
-  
-  
-  
-  @media all and (max-width:500px) {
-      .grid {
-          -ms-grid-columns: 1fr;
-          grid-template-columns: 1fr;
-      }
+@media all and (min-width: 500px) and (max-width: 750px) {
+  .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr;
   }
-  
-  @media all and (min-width: 500px) and (max-width: 750px) {
-      .grid {
-          -ms-grid-columns: 1fr 20px 1fr;
-          grid-template-columns: 1fr 1fr;
-      }
+}
+
+@media all and (max-width: 750px) {
+  .grid {
+    grid-gap: 10px;
   }
-  
-  @media all and (max-width: 750px) {
-      .grid {
-          grid-gap: 10px;
-      }
-      .grid__item:last-child {
-          grid-column: auto / auto;
-          grid-row: auto / auto;
-      }
-      h1 {
-          font-size: 22px;
-      }
+  .grid__item:last-child {
+    grid-column: auto / auto;
+    grid-row: auto / auto;
   }
+  h1 {
