--- a/css/styles.css
+++ b/css/styles.css
@@ -6,100 +6,88 @@
   --Modal-backgroud: #73956f;
 }
 body {
-    background-color: var(--Tertiary-color);
-    text-transform: capitalize;
-  }
-  h1 {
-    font-size: 50px;
-    color: var(--primary-color);
-    text-align: var(--Text-align);
-  
-  }
-  .button-class {
-    background-color: var(--primary-color);
-    border: none;
-    color: var(--Secondary-color);
-    height: 45px;
-    width: 200px;
-    text-align: var(--Text-align);
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 10px 5px;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: var(--primary-color);
-    color: var(--Secondary-color);
-    border: 2px var(--Tertiary-color);
-    text-transform: capitalize;
-  
-  }
-  
-  .pokemon-list {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    text-align: var(--Text-align);
-    justify-content: center;
-    
-  }
+  background-color: var(--Tertiary-color);
+  text-transform: capitalize;
+}
 
-  #modal-container {
-    display: none;
-    color: var(--Secondary-color);
-  }
+.custom-navbar {
+  width: fit-content; /* Set the width to fit the content (the logo) */
+  margin: 0 auto; /* Center the navbar horizontally */
+  padding: 0; /* Remove any padding */
+}
 
-  #modal-container h1 {
-    color: var(--Secondary-color);
-  }
+h1 {
+  font-size: 50px;
+  color: var(--primary-color);
+  text-align: var(--Text-align);
+}
 
-  #modal-container p {
-    display: flex;
-    flex-flow: column nowrap;
-  }
-  
-  #modal-container.is-visible {
-    position: fixed;
-    padding: 20px;
-    box-sizing: border-box;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    
-    /* to show it above other content */
-    z-index: 999; 
-    
-    /* to allow scrolling if the screen is not high enough*/
-    overflow: auto; 
-    
-    /* this is used to center the modal */
-    display: grid;
-    text-align: center;
-  }
-  
-  .modal {
-    margin: auto;
-    display: inline-block;
-    box-sizing: border-box;
-    background: var(--Modal-backgroud);
-    padding: 15px;
-    width: 100%;
-    max-width: 700px;
-    text-align: center;
-    justify-content: center;
+p {
+  font-size: 18px;
+}
 
-  }
+.button-class {
+  background-color: var(--primary-color);
+  border: none;
+  color: var(--Secondary-color);
+  height: 45px;
+  width: 200px;
+  text-align: var(--Text-align);
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px 5px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  color: var(--Secondary-color);
+  border: 2px var(--Tertiary-color);
+  text-transform: capitalize;
+}
+
+.pokemon-list {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  text-align: var(--Text-align);
+  justify-content: center;
+}
+
+.modal-content {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  color: black;
+  background: var(--primary-color);
+  padding:13px;
+  width: 100%;
+  max-width: 700px;
+  text-align: center;
+  justify-content: center;
   
-  .modal-close {
-    float: right;
-    -webkit-appearance: none;
-    border: 0;
-    background: none;
-    color: var(--Secondary-color);
-    text-decoration: underline;
+}
+
+.modal-title {
+  color: var(--Tertiary-color);
+  width: 100%;
+  text-align: center;
+}
+
+.close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: var(--Secondary-color);
+}
+
+
+@media all and (max-width: 500px) {
+  .grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
@@ -118,3 +106,6 @@ body {
     grid-row: auto / auto;
   }
   h1 {
+    font-size: 22px;
+  }
+}
