--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 body {
   background-color: var(--Tertiary-color);
   text-transform: capitalize;
+  
 }
 
 .custom-navbar {
@@ -26,7 +27,19 @@ p {
   font-size: 18px;
 }
 
-.button-class {
+.pokemon-list {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  text-align: var(--Text-align);
+  justify-content: center;
+  
+}
+
+.list-group-item {
+  background-color: black;
+}
+.btn {
   background-color: var(--primary-color);
   border: none;
   color: var(--Secondary-color);
@@ -36,7 +49,6 @@ p {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 10px 5px;
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
@@ -46,13 +58,6 @@ p {
   text-transform: capitalize;
 }
 
-.pokemon-list {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  text-align: var(--Text-align);
-  justify-content: center;
-}
 
 .modal-content {
   margin: auto;
