--- a/css/styles.css
+++ b/css/styles.css
@@ -5,50 +5,35 @@
   --Text-align: center;
   --Modal-backgroud: #73956f;
 }
+
 body {
   background-color: var(--Tertiary-color);
   text-transform: capitalize;
-  
 }
 
-.custom-navbar {
-  width: fit-content; /* Set the width to fit the content (the logo) */
-  margin: 0 auto; /* Center the navbar horizontally */
-  padding: 0; /* Remove any padding */
-}
 
-h1 {
-  font-size: 50px;
-  color: var(--primary-color);
-  text-align: var(--Text-align);
-}
-
-p {
-  font-size: 18px;
-}
 
 .pokemon-list {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  color: var(--primary-color);
   text-align: var(--Text-align);
-  justify-content: center;
-  
 }
 
 .list-group-item {
   background-color: black;
 }
-.btn {
+.btn-default {
   background-color: var(--primary-color);
   border: none;
+  width: 75%;
+  height: auto;
+  padding: 3%;
+  margin: 2% auto;
   color: var(--Secondary-color);
-  height: 45px;
-  width: 200px;
-  text-align: var(--Text-align);
+  font-size: 18px;
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  text-align: var(--Text-align);
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
@@ -58,23 +43,35 @@ p {
   text-transform: capitalize;
 }
 
+.btn:hover {
+  color: var(--Tertiary-color);
+  font-weight: bold;
+  background-color: var(--Secondary-color);
+}
+
+.btn-secondary {
+  margin: auto;
+  width: 50%;
+  background-color: var(--Tertiary-color);
+  
+}
 
 .modal-content {
   margin: auto;
   display: inline-block;
   box-sizing: border-box;
-  color: black;
+  color: var(--Secondary-color);
   background: var(--primary-color);
-  padding:13px;
+  padding: 13px;
   width: 100%;
   max-width: 700px;
   text-align: center;
   justify-content: center;
-  
+  font-size: 18px;
 }
 
 .modal-title {
-  color: var(--Tertiary-color);
+  color: var(--Secondary-color);
   width: 100%;
   text-align: center;
 }
@@ -82,35 +79,27 @@ p {
 .close {
   float: right;
   -webkit-appearance: none;
-  border: 0;
   background: none;
   color: var(--Secondary-color);
 }
 
-
 @media all and (max-width: 500px) {
-  .grid {
+  .list-group {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
-  .grid {
+  .list-group {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
+    width: 100%;
   }
 }
 
 @media all and (max-width: 750px) {
-  .grid {
+  .list-group {
     grid-gap: 10px;
-  }
-  .grid__item:last-child {
-    grid-column: auto / auto;
-    grid-row: auto / auto;
-  }
-  h1 {
-    font-size: 22px;
   }
 }
